# curripy

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/curripy/: README.md  __generics.py  __init__.py  dispatches.py  dispatches.pyi  protocols.py
src/curripy/__bootstrap/: README.md  builtins_.py  builtins_.pyi  compose_.py  compose_.pyi  dummies.py  functools_.py  functools_.pyi  inspect_.py  operator_.py  operator_.pyi
src/curripy/__deprecated/: curry_class.py  curry_class.pyi  partial_.pyi
src/curripy/__dummies/: func.py  obj.py
src/curripy/__overlays/: functools_.py  functools_.pyi  operator_.py  operator_.pyi
src/curripy/__temporary/: README.md  functools_.pyi  operator_.py  operator_.pyi
src/curripy/_bootstrap/: README.md  builtins_.pyi  compose.py  compose.pyi  functools_.py  identity.pyi  inspect_.py  operator.pyi  operator_.py
src/curripy/_overlays/: README.md  functools_.pyi  operator_.py  operator_.pyi
src/curripy/builtins_/: __init__.py  curried.py  curried.pyi  pointfree.py  pointfree.pyi  protocols.py
src/curripy/collections_/: __init__.py  methods.py
src/curripy/curried/: __init__.py  builtins_.py  functools_.py  operator_.py
src/curripy/dummies/: func.py  func.pyi  obj.py
src/curripy/functionalize_tools/: __init__.py  compose.py  curry.py
src/curripy/functools_/: curried.py  pointfree.py
src/curripy/inspect_/: __init__.py  curried.py  pointfree.py
src/curripy/methods/: str_.py
src/curripy/modules/: __init__.py
src/curripy/operator_/: __init__.py  (+4 more)
tests/: test_builtins.py  test_keywords.py  test_re.py  test_utils.py
(+60 files in other folders)
