[project]
name = "curripy"
version = "0.1.1"
description = "Curried / Point-free versions of the Python standard libraries functions and methods."
authors = [
    { name = "Lehmaning", email = "60032845+Lehmaning@users.noreply.github.com" }
]
dependencies = [
    "typing-extensions>=4.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://curripy.readthedocs.org"
Repository = "https://github.com/Lehmaning/curripy/"
Issues = "https://github.com/Lehmaning/curripy/issues"
# Changelog = "https://github.com/Lehmaning/curripy/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "autoflake>=2.3.1",
    "pytest>=8.2.2",
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/curripy"]
